4.2.17
- SMIME certificated grid will reload on show.
- Fixed owner that was not showing up in the administration->tickettypes grid of the ticket module.
- Addressbook: Added pagination to the "Administration"->"Addresslists" grid
- Fixed default date / time problem on task reminder.
- Sieve: Rules table is refreshed after every single rearrangement.

03-11-2013 4.2.16
- IMip handler for CalDAV to support apple invitations better.
- Don't ask to notify event participants when nothing relevant has been changed
- Disable address books collapsing when favorites is not installed
- Changed the default sort of the project templates store so it uses the "name" instead of the "id" to sort.
- Fixed bug where email got cut of on the word begin
- Cut of encoded strings on the end of email attachment names

30-08-2013 4.2.15
- Removed unseen caching. Broke checker.
- Update Norwegian, German and Swedish translation
- Could not find relational ACL error in billing module

27-08-2013 4.2.14
- Everybody may create calendar views
- Corrected mistake in 4.2.13 release

27-08-2013 4.2.13
- Z-push 2 did not close DB connection while pinging.
- Internet Explorer will never open email attachments inline for MS Office mime types.
- Get capability from IMAP login command
- Query unseen messages only when modseq changes
- Option to show event status in views
- Bug in reminder calculation
- Refuse to move events to other weekdays when they recur by weekday

19-08-2013 4.2.12
- Bug in attachment download
- Fixed security vulnerability
- Minimized disk access in files module
- Detect company employees for document templates as well so they don't need to be linked
- Added participant status to view grid.
- Added a check for empty "name" property in an email part to determine if it is a mail body or an attachment
- Added check for (left)mousebutton in onmousedown event in the calendarGrid so the dragevent will not be fired when doing a right click