@@ -1,9 +1,11 @@
 4.2.17
+- Peek when viewing attachments
 - SMIME certificated grid will reload on show.
 - Fixed owner that was not showing up in the administration->tickettypes grid of the ticket module.
 - Addressbook: Added pagination to the "Administration"->"Addresslists" grid
 - Fixed default date / time problem on task reminder.
 - Sieve: Rules table is refreshed after every single rearrangement.
+- New LDAP parameter to create mailboxes with the serverclient
 
 03-11-2013 4.2.16
 - IMip handler for CalDAV to support apple invitations better.
